--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5JF-zb-ctL">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5JF-zb-ctL">
                                 <rect key="frame" x="30" y="475" width="354" height="34"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
@@ -36,13 +36,13 @@
                                     <action selector="didTapLoginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rdp-Kx-fNT"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account? " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QIM-Op-fZ7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Don't have an account? " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QIM-Op-fZ7">
                                 <rect key="frame" x="117" y="534" width="180.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I6D-OC-m5E">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I6D-OC-m5E">
                                 <rect key="frame" x="175.5" y="555" width="63" height="34"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                 <state key="normal" title="Sign Up"/>
@@ -132,7 +132,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WS9-2x-mY6">
-                                <rect key="frame" x="30" y="475" width="354" height="30"/>
+                                <rect key="frame" x="30" y="475" width="354" height="34"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                 <state key="normal" title="Sign Up">
@@ -216,11 +216,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="InstaPostCell" rowHeight="524" id="c9J-nN-F0t" customClass="InstaPostTableViewCell">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="524"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="InstaPostCell" rowHeight="648" id="c9J-nN-F0t" customClass="InstaPostTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="648"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="c9J-nN-F0t" id="DyT-WR-rTp">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="524"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="648"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile_tab" translatesAutoresizingMaskIntoConstraints="NO" id="Z9l-U0-43g">
@@ -243,14 +243,22 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwy-pt-jnf">
-                                                    <rect key="frame" x="20" y="473" width="59.5" height="20.5"/>
+                                                    <rect key="frame" x="20" y="487.5" width="59.5" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTL-nz-yFD">
+                                                    <rect key="frame" x="20" y="468" width="26.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="RTL-nz-yFD" firstAttribute="top" secondItem="imf-cK-G9A" secondAttribute="bottom" constant="5" id="2dC-cP-Eym"/>
                                                 <constraint firstItem="imf-cK-G9A" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leading" id="3eX-ca-tGz"/>
+                                                <constraint firstItem="RTL-nz-yFD" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leadingMargin" id="3kj-aA-zRK"/>
                                                 <constraint firstItem="gwy-pt-jnf" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leadingMargin" id="BM5-ah-q7t"/>
                                                 <constraint firstItem="imf-cK-G9A" firstAttribute="top" secondItem="Z9l-U0-43g" secondAttribute="bottom" constant="8" id="Eni-ec-JVU"/>
                                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gwy-pt-jnf" secondAttribute="bottom" constant="10" id="Hyh-vY-7Td"/>
@@ -260,13 +268,15 @@
                                                 <constraint firstItem="7En-Sh-RBc" firstAttribute="leading" secondItem="Z9l-U0-43g" secondAttribute="trailing" constant="8" id="UAT-uq-Ntl"/>
                                                 <constraint firstItem="Z9l-U0-43g" firstAttribute="leading" secondItem="DyT-WR-rTp" secondAttribute="leadingMargin" id="Wsa-Vg-IOi"/>
                                                 <constraint firstItem="Z9l-U0-43g" firstAttribute="top" secondItem="DyT-WR-rTp" secondAttribute="topMargin" id="Zu5-qQ-bI3"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="RTL-nz-yFD" secondAttribute="trailing" constant="25" id="bZ9-aA-fw1"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7En-Sh-RBc" secondAttribute="trailing" constant="15" id="dIO-T6-AfO"/>
                                                 <constraint firstItem="imf-cK-G9A" firstAttribute="centerX" secondItem="DyT-WR-rTp" secondAttribute="centerX" id="fLP-GP-Hlw"/>
-                                                <constraint firstItem="gwy-pt-jnf" firstAttribute="top" secondItem="imf-cK-G9A" secondAttribute="bottom" constant="10" id="fzq-33-WzL"/>
+                                                <constraint firstItem="gwy-pt-jnf" firstAttribute="top" secondItem="RTL-nz-yFD" secondAttribute="bottom" constant="5" id="z1S-uc-oTd"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="captionLabel" destination="gwy-pt-jnf" id="vaS-SW-nqx"/>
+                                            <outlet property="dateLabel" destination="RTL-nz-yFD" id="0RJ-FS-1G6"/>
                                             <outlet property="photoImageView" destination="imf-cK-G9A" id="kKt-WT-euS"/>
                                             <outlet property="userImageView" destination="Z9l-U0-43g" id="7Nd-9E-llh"/>
                                             <outlet property="usernameLabel" destination="7En-Sh-RBc" id="gD2-oW-9g8"/>
