--- a/Instagram/Views/PostView.xib
+++ b/Instagram/Views/PostView.xib
@@ -18,32 +18,31 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="658"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y6H-nG-lOD" customClass="PFImageView">
-                    <rect key="frame" x="0.0" y="38" width="414" height="414"/>
-                    <color key="backgroundColor" red="0.57132383850000001" green="0.96699744460000003" blue="0.68712680589999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <rect key="frame" x="0.0" y="82" width="414" height="414"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="414" id="b5R-kc-bGf"/>
-                        <constraint firstAttribute="height" constant="414" id="owz-Q8-kBH"/>
-                        <constraint firstAttribute="width" secondItem="y6H-nG-lOD" secondAttribute="height" multiplier="1:1" id="q3U-uO-y6d"/>
+                        <constraint firstAttribute="height" constant="414" id="1Mf-wG-ktV"/>
+                        <constraint firstAttribute="width" constant="414" id="jb0-Hy-Xg1"/>
+                        <constraint firstAttribute="width" secondItem="y6H-nG-lOD" secondAttribute="height" multiplier="1:1" id="qAJ-xp-Uwn"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2W-4Z-cbF">
-                    <rect key="frame" x="20" y="10" width="68" height="18"/>
+                    <rect key="frame" x="20" y="54" width="68" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DyY-at-SIe">
-                    <rect key="frame" x="20" y="462" width="26.5" height="14.5"/>
+                    <rect key="frame" x="20" y="506" width="26.5" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7DS-Ze-XvO">
-                    <rect key="frame" x="20" y="484.5" width="60" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7DS-Ze-XvO">
+                    <rect key="frame" x="20" y="528.5" width="59.5" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -51,8 +50,7 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="7DS-Ze-XvO" secondAttribute="bottom" constant="10" id="1Q3-e5-cgm"/>
-                <constraint firstItem="g2W-4Z-cbF" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="D1A-au-XGt"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="7DS-Ze-XvO" secondAttribute="bottom" priority="250" constant="10" id="1Q3-e5-cgm"/>
                 <constraint firstItem="y6H-nG-lOD" firstAttribute="top" secondItem="g2W-4Z-cbF" secondAttribute="bottom" constant="10" id="LYG-yJ-Wpd"/>
                 <constraint firstAttribute="trailing" secondItem="y6H-nG-lOD" secondAttribute="trailing" id="NPc-18-sVe"/>
                 <constraint firstItem="7DS-Ze-XvO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="Vsu-r0-CXl"/>
@@ -60,12 +58,12 @@
                 <constraint firstItem="7DS-Ze-XvO" firstAttribute="top" secondItem="DyY-at-SIe" secondAttribute="bottom" constant="8" id="fhk-lv-JTt"/>
                 <constraint firstItem="DyY-at-SIe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="jwx-Md-zqs"/>
                 <constraint firstItem="DyY-at-SIe" firstAttribute="top" secondItem="y6H-nG-lOD" secondAttribute="bottom" constant="10" id="ki9-I3-Q53"/>
+                <constraint firstItem="g2W-4Z-cbF" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="kil-3G-CVl"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="g2W-4Z-cbF" secondAttribute="trailing" constant="20" id="qLD-2W-Aid"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="7DS-Ze-XvO" secondAttribute="trailing" constant="20" id="qLh-yr-Y9I"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="DyY-at-SIe" secondAttribute="trailing" constant="20" id="tIO-N3-F4Q"/>
                 <constraint firstItem="g2W-4Z-cbF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="vpU-sh-zJT"/>
             </constraints>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="69.565217391304358" y="-85.044642857142847"/>
         </view>
